Fixed h2 in modals to wrap

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -495,9 +495,6 @@ footer .footer-below{
 h2{
     font-family: 'Lobster', cursive;
     line-height: 1.3;
-    /*width: 1120px;*/
-    height: 80px;
-    white-space: nowrap;
 }
 
 p{
